welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:4: error: ')' expected but '=' found.
  var (y=a/10)%10
        ^shareDigit:20: error: '=' expected but '}' found.
} 
^